[gd_scene load_steps=22 format=3 uid="uid://b87ibxj80cr8d"]

[ext_resource type="Script" path="res://play/actors/enemies/bat/bat.gd" id="1_dyern"]
[ext_resource type="Resource" uid="uid://dstawtytxnu4h" path="res://play/actors/enemies/bat/bat_data.tres" id="2_grrln"]
[ext_resource type="PackedScene" uid="uid://2l85qpttmm5p" path="res://play/resources/components/detect_area_component/detect_area_component.tscn" id="4_cm6jl"]
[ext_resource type="PackedScene" uid="uid://cvd5oclhm0tm7" path="res://play/resources/components/hurt_box_component/hurt_box_component.tscn" id="5_nibcu"]
[ext_resource type="PackedScene" uid="uid://crtue82sxdi1q" path="res://play/resources/components/hit_box_component/hit_box_component.tscn" id="6_60gsv"]
[ext_resource type="Script" path="res://play/resources/data/attack_data/attack_resource.gd" id="7_jn85p"]
[ext_resource type="Script" path="res://play/actors/enemies/bat/states/move.gd" id="8_4eyua"]
[ext_resource type="Script" path="res://play/resources/state_machine/state_machine.gd" id="8_ehhje"]
[ext_resource type="PackedScene" uid="uid://dfvc0emmg1p3s" path="res://play/resources/components/path_finding_component/path_finding_component.tscn" id="10_ffjvg"]
[ext_resource type="Script" path="res://play/actors/enemies/bat/states/attack.gd" id="11_4bh2r"]
[ext_resource type="PackedScene" uid="uid://wagjkpckrvmf" path="res://play/resources/components/velocity_component/velocity_component.tscn" id="11_7hdqq"]
[ext_resource type="Script" path="res://play/actors/enemies/bat/states/hurt.gd" id="12_koe8g"]
[ext_resource type="PackedScene" uid="uid://dlrfdle8sk8ec" path="res://play/resources/components/healt_component/healt_component.tscn" id="14_gkuet"]
[ext_resource type="Script" path="res://play/actors/enemies/bat/states/dead.gd" id="14_suex3"]
[ext_resource type="PackedScene" uid="uid://bsk81rsln3fxp" path="res://play/resources/components/path_finding_component/navigation_component.tscn" id="16_o7bky"]
[ext_resource type="AnimationLibrary" uid="uid://dti7mtpv55t3" path="res://play/actors/enemies/bat/bat_animations.res" id="17_koamg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j2oj4"]
size = Vector2(10, 10)

[sub_resource type="CircleShape2D" id="CircleShape2D_7rghk"]
radius = 13.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v5jp6"]
size = Vector2(16, 15)

[sub_resource type="Resource" id="Resource_sjnj4"]
resource_local_to_scene = true
script = ExtResource("7_jn85p")
attack_damage = 1

[sub_resource type="CircleShape2D" id="CircleShape2D_surod"]
radius = 18.0

[node name="Bat" type="CharacterBody2D" node_paths=PackedStringArray("health_component", "velocity_component", "hit_box_component", "path_finding_component", "navigation_component", "detect_area_component", "sprite", "anim")]
collision_layer = 2
collision_mask = 2
motion_mode = 1
script = ExtResource("1_dyern")
health_component = NodePath("StateMachine/Hurt/HealthComponent")
velocity_component = NodePath("StateMachine/Move/VelocityComponent")
hit_box_component = NodePath("HitBoxComponent")
path_finding_component = NodePath("StateMachine/Move/PathFindingComponent")
navigation_component = NodePath("NavigationComponent")
detect_area_component = NodePath("DetectAreaComponent")
sprite = NodePath("Sprite2D")
anim = NodePath("AnimationPlayer")
enemy_data = ExtResource("2_grrln")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = -0.0872665
scale = Vector2(1.3, 1.3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_j2oj4")

[node name="DetectAreaComponent" parent="." instance=ExtResource("4_cm6jl")]
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectAreaComponent"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_7rghk")

[node name="HurtBox" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("5_nibcu")]
collision_layer = 2
collision_mask = 25
health_component = NodePath("../StateMachine/Hurt/HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_v5jp6")

[node name="HitBoxComponent" parent="." instance=ExtResource("6_60gsv")]
collision_layer = 2
monitoring = false
data = SubResource("Resource_sjnj4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxComponent"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_surod")
disabled = true

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("8_ehhje")
initial_state = NodePath("Move")

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource("8_4eyua")

[node name="PathFindingComponent" parent="StateMachine/Move" node_paths=PackedStringArray("velocity_component", "navigation_component") instance=ExtResource("10_ffjvg")]
velocity_component = NodePath("../VelocityComponent")
navigation_component = NodePath("../../../NavigationComponent")
continuous_following_target = true

[node name="VelocityComponent" parent="StateMachine/Move" instance=ExtResource("11_7hdqq")]
max_speed = 100.0
min_speed = 100.0
speed = 70.0

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource("11_4bh2r")

[node name="Hurt" type="Node" parent="StateMachine"]
script = ExtResource("12_koe8g")

[node name="HealthComponent" parent="StateMachine/Hurt" instance=ExtResource("14_gkuet")]

[node name="Dead" type="Node" parent="StateMachine"]
script = ExtResource("14_suex3")

[node name="NavigationComponent" parent="." node_paths=PackedStringArray("navigation_entitie") instance=ExtResource("16_o7bky")]
navigation_layers = 4
avoidance_enabled = true
radius = 20.0
avoidance_layers = 2
avoidance_mask = 14
navigation_entitie = NodePath("..")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
volume_db = 10.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": ExtResource("17_koamg")
}
